barra superior y responsive
icons responsivos en la barra superior

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 		<section class="widpages">
 			<nav class="secund">
 				<ul class="socialmedia">
-					<li><a href="#" ></a></li>
+					<li><a href="#" class="icon-facebook"></a></li>
+					<li><a href="#" class="icon-twitter"></a></li>
+					<li><a href="#" class="share"></a></li>
+					<li><a href="#" class="legal"></a></li>
+				</ul>
+				<ul class="secmenu">
+					<li><a href="#" class="icon-home"></a></li>
+					<li><a href="#" class="registro"></a></li>
+					<li><a href="#" class="ingresar"></a></li>
 				</ul>
 			</nav>
 		</section>
