--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title></title>
+<meta charset="UFT-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -12,7 +13,7 @@
 <header>
 	<section class="linetop">
 		<section class="widpages">
-			<nav class="secund">
+			<nav class="second">
 				<ul class="socialmedia">
 					<li><a href="#" class="icon-facebook"></a></li>
 					<li><a href="#" class="icon-twitter"></a></li>
@@ -23,6 +24,19 @@
 					<li><a href="#" class="icon-home"></a></li>
 					<li><a href="#" class="registro"></a></li>
 					<li><a href="#" class="ingresar"></a></li>
+				</ul>
+			</nav>
+		</section>
+	</section>
+	<section class="headerbar">
+		<section class="widpages">
+			<figure><a href="#"><img src="images/logo_doble.png"/></a></figure>
+			<nav class="first">
+				<ul class="menuprin">
+					<li><a href="#">&#191C&oacute;mo funciona?</a></li>
+					<li><a href="#">Planes y Precios</a></li>
+					<li><a href="#">Sobre Nosotros</a></li>
+					<li><a href="#">Cont&aacute;ctenos</a></li>
 				</ul>
 			</nav>
 		</section>
